[package]
name = "six_viewer"
version = "0.1.1"
edition = "2021"

license = "WTFPL"
description = "A short program to color output based on an output.txt file."
homepage = "https://yeet.work/"
repository = "https://github.com/thecakeisalie25/six_viewer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
nu-ansi-term = "0.45.1"
